# e-commerce

./: pyproject.toml
.github/workflows/: ruff.yml  tests.yml
app/: api_admin.py  main.py
app/admin/: admin.py  auth.py  models.py
app/commands/: custom.py  db.py  dev.py  docs.py  keys.py  test.py  user.py
app/config/: helpers.py  metadata.py  settings.py
app/crud/: category.py
app/database/: db.py  helpers.py
app/managers/: api_key.py  auth.py  email.py  email_manager.py  user.py
app/migrations/: env.py
app/migrations/versions/: 2023_07_19_1123-5a8bd25c2227_initial.py  2025_02_18_1514-add_api_keys_table.py
app/models/: api_key.py  category.py  user.py
app/resources/: api_key.py  auth.py  home.py  user.py
app/schemas/request/: category.py  user.py
app/v1/: category.py
tests/: conftest.py
tests/cli/: test_cli_create_user.py  test_cli_custom_command.py  test_cli_db_command.py  test_cli_db_seed.py  test_cli_docs_command.py  test_cli_keys_command.py  test_cli_main.py  test_cli_test_command.py  test_cli_user_command.py
tests/integration/: test_admin_routes.py  test_api_key_routes.py  test_auth_routes.py  test_home_routes.py  test_protected_user_routes.py  test_user_routes.py
tests/unit/: test_admin.py  test_api_key_auth.py  test_api_key_manager.py  test_auth_manager.py  test_catch_all.py  test_config_helpers.py  test_database.py  test_email_manager.py  test_jwt_auth.py  test_lifespan.py  test_model.py  test_password_helpers.py  test_security.py  test_user_manager.py  test_validation.py
